--- a/www/css/main.css
+++ b/www/css/main.css
@@ -315,10 +315,14 @@ textarea {
 }
 .header-info {
   float: right;
+  position: relative;
+  z-index: 5;
 }
 .header-info a {
   font-size: 14px;
   line-height: 22px;
+  text-decoration: none;
+  border-bottom: 1px solid #c4c6dd;
 }
 .header-info__home {
   background-position: left top 5px;
@@ -364,7 +368,7 @@ textarea {
 }
 .header-info__phone a {
   text-decoration: none;
-  border-bottom: 1px dashed #3a438e;
+  border-bottom: 1px dashed #c4c6dd;
 }
 .header-info__phone p {
   font-size: 16px;
@@ -463,7 +467,7 @@ textarea {
 }
 .media-item__add {
   background-color: #ffffff;
-  padding: 0 14px 0 4px;
+  margin: 0 14px 0 4px;
   display: block;
   font-size: 0;
 }
@@ -567,6 +571,7 @@ textarea {
   display: inline-block;
   width: 70%;
   min-width: 70%;
+  padding: 0 30px;
   vertical-align: middle;
   text-align: center;
   position: relative;
@@ -586,211 +591,36 @@ textarea {
 }
 .features-block {
   font-size: 0;
-}
-@-webkit-keyframes animatedFeatures_place {
-  0 {
-    -webkit-transform: translate(0, -40px);
-            transform: translate(0, -40px);
-  }
-  50% {
-    -webkit-transform: translate(0, 20px);
-            transform: translate(0, 20px);
-  }
-  100% {
-    -webkit-transform: translate(0, -232px);
-            transform: translate(0, -232px);
-  }
-}
-@keyframes animatedFeatures_place {
-  0 {
-    -webkit-transform: translate(0, -40px);
-            transform: translate(0, -40px);
-  }
-  50% {
-    -webkit-transform: translate(0, 20px);
-            transform: translate(0, 20px);
-  }
-  100% {
-    -webkit-transform: translate(0, -232px);
-            transform: translate(0, -232px);
-  }
-}
-@-webkit-keyframes animatedFeatures_structure {
-  0 {
-    -webkit-transform: translate(0, -60px);
-            transform: translate(0, -60px);
-  }
-  50% {
-    -webkit-transform: translate(0, 20px);
-            transform: translate(0, 20px);
-  }
-  100% {
-    -webkit-transform: translate(0, -253px);
-            transform: translate(0, -253px);
-  }
-}
-@keyframes animatedFeatures_structure {
-  0 {
-    -webkit-transform: translate(0, -60px);
-            transform: translate(0, -60px);
-  }
-  50% {
-    -webkit-transform: translate(0, 20px);
-            transform: translate(0, 20px);
-  }
-  100% {
-    -webkit-transform: translate(0, -253px);
-            transform: translate(0, -253px);
-  }
-}
-@-webkit-keyframes animatedFeatures_parks {
-  0 {
-    -webkit-transform: translate(0, -95px);
-            transform: translate(0, -95px);
-  }
-  50% {
-    -webkit-transform: translate(0, 20px);
-            transform: translate(0, 20px);
-  }
-  100% {
-    -webkit-transform: translate(0, -287px);
-            transform: translate(0, -287px);
-  }
-}
-@keyframes animatedFeatures_parks {
-  0 {
-    -webkit-transform: translate(0, -95px);
-            transform: translate(0, -95px);
-  }
-  50% {
-    -webkit-transform: translate(0, 20px);
-            transform: translate(0, 20px);
-  }
-  100% {
-    -webkit-transform: translate(0, -287px);
-            transform: translate(0, -287px);
-  }
-}
-@-webkit-keyframes animatedFeatures_tech {
-  0 {
-    -webkit-transform: translate(0, -84px);
-            transform: translate(0, -84px);
-  }
-  50% {
-    -webkit-transform: translate(0, 20px);
-            transform: translate(0, 20px);
-  }
-  100% {
-    -webkit-transform: translate(0, -276px);
-            transform: translate(0, -276px);
-  }
-}
-@keyframes animatedFeatures_tech {
-  0 {
-    -webkit-transform: translate(0, -84px);
-            transform: translate(0, -84px);
-  }
-  50% {
-    -webkit-transform: translate(0, 20px);
-            transform: translate(0, 20px);
-  }
-  100% {
-    -webkit-transform: translate(0, -276px);
-            transform: translate(0, -276px);
-  }
-}
-@-webkit-keyframes animatedFeatures_comfort {
-  0 {
-    -webkit-transform: translate(0, -90px);
-            transform: translate(0, -90px);
-  }
-  50% {
-    -webkit-transform: translate(0, 20px);
-            transform: translate(0, 20px);
-  }
-  100% {
-    -webkit-transform: translate(0, -284px);
-            transform: translate(0, -284px);
-  }
-}
-@keyframes animatedFeatures_comfort {
-  0 {
-    -webkit-transform: translate(0, -90px);
-            transform: translate(0, -90px);
-  }
-  50% {
-    -webkit-transform: translate(0, 20px);
-            transform: translate(0, 20px);
-  }
-  100% {
-    -webkit-transform: translate(0, -284px);
-            transform: translate(0, -284px);
-  }
+  border-bottom: 1px solid #d7d7d7;
+  overflow: hidden;
 }
 .features-item {
   width: 20%;
-  display: table-cell;
+  display: inline-block;
   position: relative;
   border-top: 1px solid #d7d7d7;
   border-right: 1px solid #d7d7d7;
-  border-bottom: 1px solid #d7d7d7;
   overflow: hidden;
   vertical-align: top;
-  /*&.out {
-        .features-item__desc_place {
-            animation: animatedFeatures_place_out 0.7s alternate-reverse;
-            animation-fill-mode: forwards;
-        }
-        .features-item__desc_structure {
-            animation: animatedFeatures_structure 0.7s reverse;
-            animation-fill-mode: forwards;
-        }
-        .features-item__desc_parks {
-            animation: animatedFeatures_parks 0.7s reverse;
-            animation-fill-mode: forwards;
-        }
-        .features-item__desc_tech {
-            animation: animatedFeatures_tech 0.7s reverse;
-            animation-fill-mode: forwards;
-        }
-        .features-item__desc_comfort {
-            animation: animatedFeatures_comfort 0.7s reverse;
-            animation-fill-mode: forwards;
-        }
-    }*/
 }
 .features-item:last-child {
   border-right: 0;
 }
-.features-item.over .features-item__desc_place {
-  -webkit-animation: animatedFeatures_place 0.7s normal;
-          animation: animatedFeatures_place 0.7s normal;
-  -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
+.features-item:hover .features-item__image {
+  height: 0px;
+  margin-top: 20px;
+  margin-bottom: 0;
+  -webkit-transform: translate(0, 0);
+      -ms-transform: translate(0, 0);
+          transform: translate(0, 0);
+  opacity: 0;
+  -webkit-transition: margin-top 0.3s 0.1s, margin-bottom 0.3s 0.1s, opacity 0.3s 0.7s, height 0.3s 0.7s, -webkit-transform 0.3s 0.1s;
+  transition: margin-top 0.3s 0.1s, margin-bottom 0.3s 0.1s, opacity 0.3s 0.7s, height 0.3s 0.7s, -webkit-transform 0.3s 0.1s;
+  transition: margin-top 0.3s 0.1s, transform 0.3s 0.1s, margin-bottom 0.3s 0.1s, opacity 0.3s 0.7s, height 0.3s 0.7s;
+  transition: margin-top 0.3s 0.1s, transform 0.3s 0.1s, margin-bottom 0.3s 0.1s, opacity 0.3s 0.7s, height 0.3s 0.7s, -webkit-transform 0.3s 0.1s;
 }
-.features-item.over .features-item__desc_structure {
-  -webkit-animation: animatedFeatures_structure 0.7s normal;
-          animation: animatedFeatures_structure 0.7s normal;
-  -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
-}
-.features-item.over .features-item__desc_parks {
-  -webkit-animation: animatedFeatures_parks 0.7s normal;
-          animation: animatedFeatures_parks 0.7s normal;
-  -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
-}
-.features-item.over .features-item__desc_tech {
-  -webkit-animation: animatedFeatures_tech 0.7s normal;
-          animation: animatedFeatures_tech 0.7s normal;
-  -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
-}
-.features-item.over .features-item__desc_comfort {
-  -webkit-animation: animatedFeatures_comfort 0.7s normal;
-          animation: animatedFeatures_comfort 0.7s normal;
-  -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
+.features-item:hover .features-item__header {
+  margin-top: 100px;
 }
 .features-item:hover .features-item__pattern {
   -webkit-transform: translate(0, 0);
@@ -805,61 +635,39 @@ textarea {
   opacity: 1;
   padding: 0 40px 0px;
   background-repeat: no-repeat;
-  -webkit-transition: -webkit-transform 0.3s 0.1s;
-  transition: -webkit-transform 0.3s 0.1s;
-  transition: transform 0.3s 0.1s;
-  transition: transform 0.3s 0.1s, -webkit-transform 0.3s 0.1s;
 }
 @media screen and (max-width: 1470px) {
   .features-item__desc {
     padding: 0 30px 0;
   }
 }
-.features-item__desc_place {
-  -webkit-transform: translate(0, -40px);
-      -ms-transform: translate(0, -40px);
-          transform: translate(0, -40px);
-  margin-bottom: 10px;
-}
-.features-item__desc_structure {
-  -webkit-transform: translate(0, -60px);
-      -ms-transform: translate(0, -60px);
-          transform: translate(0, -60px);
-  margin-bottom: -10px;
-}
-.features-item__desc_parks {
-  -webkit-transform: translate(0, -95px);
-      -ms-transform: translate(0, -95px);
-          transform: translate(0, -95px);
-  margin-bottom: -45px;
-}
-.features-item__desc_tech {
-  -webkit-transform: translate(0, -84px);
-      -ms-transform: translate(0, -84px);
-          transform: translate(0, -84px);
-  margin-bottom: -34px;
-}
-.features-item__desc_comfort {
-  -webkit-transform: translate(0, -90px);
-      -ms-transform: translate(0, -90px);
-          transform: translate(0, -90px);
-  margin-bottom: -40px;
-}
 .features-item__image {
   display: block;
   position: relative;
+  height: 287px;
+  width: 100%;
+  margin-top: 0;
+  margin-bottom: -87px;
   background-position: left bottom;
   background-repeat: no-repeat;
+  background-size: contain;
+  -webkit-transform: translate(0, -87px);
+      -ms-transform: translate(0, -87px);
+          transform: translate(0, -87px);
+  opacity: 1;
+  -webkit-transition: margin-top 0.3s 0.1s, margin-bottom 0.3s 0.1s, height 0.3s 0.1s, opacity 0.3s 0.1s, -webkit-transform 0.3s 0.1s;
+  transition: margin-top 0.3s 0.1s, margin-bottom 0.3s 0.1s, height 0.3s 0.1s, opacity 0.3s 0.1s, -webkit-transform 0.3s 0.1s;
+  transition: margin-top 0.3s 0.1s, transform 0.3s 0.1s, margin-bottom 0.3s 0.1s, height 0.3s 0.1s, opacity 0.3s 0.1s;
+  transition: margin-top 0.3s 0.1s, transform 0.3s 0.1s, margin-bottom 0.3s 0.1s, height 0.3s 0.1s, opacity 0.3s 0.1s, -webkit-transform 0.3s 0.1s;
 }
-.features-item__image img {
-  max-width: 100%;
-  width: auto;
-  height: auto;
-}
-@media screen and (max-width: 1470px) {
-  .features-item__image img {
-    width: 70%;
-    height: 70%;
+@media screen and (max-width: 1740px) {
+  .features-item__image {
+    height: 180px;
+    margin-bottom: -55px;
+    background-size: contain ;
+    -webkit-transform: translate(0, -55px);
+        -ms-transform: translate(0, -55px);
+            transform: translate(0, -55px);
   }
 }
 .features-item__image_desc-place {
@@ -880,6 +688,8 @@ textarea {
 .features-item__header {
   font-size: 30px;
   margin-top: 30px;
+  -webkit-transition: margin-top 0.3s 0.1s;
+  transition: margin-top 0.3s 0.1s;
 }
 @media screen and (max-width: 1470px) {
   .features-item__header {
@@ -887,9 +697,10 @@ textarea {
   }
 }
 .features-item__text {
-  margin-top: 30px;
+  margin-top: 10px;
   font-size: 16px;
   line-height: 24px;
+  padding-bottom: 50px;
 }
 @-webkit-keyframes animatedBackground {
   0 {
